# rover-proj

./: .env.example  .flake8  .gitignore  Dockerfile  configs.md  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  how-to-camera.md  init_db.py  main.py  me.md  pyproject.toml  pytest.ini  reset-db.py
.github/workflows/: ci.yml  deploy.yml  test_app.py  test_auth.py  test_camera.py
app/: __init__.py  auth.py  camera.py  database.py  main.py  models.py  motion.py  routes.py  sensors.py  streaming.py  websocket.py
app/models/: __init__.py  logs.py  telemetry.py  user.py
app/static/css/: auth.css  dashboard.css  style.css  unauthorized.css
app/static/js/: dashboard.js
app/templates/: base.html  index.html  login.html  register.html  unauthorized.html
app/templates/auth/: privilege_granting.html  unauthorized.html
app/templates/logs/: logs.html
tests/: conftest.py  test_app.py  test_auth.py  test_basic.py  test_camera.py
