[project]
name = "rover-proj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "eventlet>=0.40.4",
    "flask>=3.1.2",
    "flask-bcrypt>=1.0.1",
    "flask-jwt-extended>=4.7.1",
    "flask-login>=0.6.3",
    "flask-socketio>=5.6.0",
    "flask-sqlalchemy>=3.1.1",
    "gpiozero>=2.0.1",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.1",
    "smbus2>=0.6.0",
    "opencv-python-headless>=4.9.0.80",
    "pytest>=8.0.0",
    "flake8>=7.0.0",
    "ruff>=0.14.13",
    "flask-migrate>=4.1.0",
]

[dependency-groups]
dev = [
    "pytest-env>=1.2.0",
]
